# bunker_manipulator

./: .gitmodules  LICENSE
bunkUr_hardware/: package.xml  setup.cfg  setup.py
bunkUr_hardware/config/: ur_controllers_bunkur.yaml
bunkUr_hardware/launch/: ur_control_bunkur.launch.py
bunker_hardware/: README.md
bunker_hardware/scripts/: demo_control.py  setup_workspace.sh
bunker_sim/: README_BACKUP.md
bunker_sim/src/: bunker.urdf  debug_bunker.urdf  params_debug.yaml  params_fixed.yaml  params_manual.yaml  set_robot_description.py
bunker_sim/src/Universal_Robots_ROS2_Description/: .pre-commit-config.yaml
bunker_sim/src/Universal_Robots_ROS2_GZ_Simulation/: ur_simulation_gz.jazzy.repos  ur_simulation_gz.kilted.repos  ur_simulation_gz.rolling.repos
bunker_sim/src/Universal_Robots_ROS2_GZ_Simulation/.github/workflows/: ci-format.yml  reusable_ici.yml  sphinx_build.yml
bunker_sim/src/Universal_Robots_ROS2_GZ_Simulation/ur_simulation_gz/: CHANGELOG.rst
bunker_sim/src/Universal_Robots_ROS2_GZ_Simulation/ur_simulation_gz/doc/: index.rst
bunker_sim/src/Universal_Robots_ROS2_GZ_Simulation/ur_simulation_gz/launch/: ur_sim_control.launch.py  ur_sim_moveit.launch.py
bunker_sim/src/Universal_Robots_ROS2_GZ_Simulation/ur_simulation_gz/test/: test_description.py  test_gz.py
bunker_sim/src/Universal_Robots_ROS2_GZ_Simulation/ur_simulation_gz/urdf/: ur_gz.urdf.xacro
bunker_sim/src/config/: mur_controllers.yaml
bunker_sim/src/gz_ros2_control/: .pre-commit-config.yaml
bunker_sim/src/gz_ros2_control/doc/: index.rst
bunker_sim/src/ira_laser_tools/src/ira_laser_tools/src/: laserscan_multi_merger.cpp
bunker_sim/src/match_mobile_robotics_jazzy/: README.md
bunker_sim/src/match_mobile_robotics_jazzy/match_gazebo/: package.xml  setup.cfg  setup.py
bunker_sim/src/match_mobile_robotics_jazzy/match_gazebo/launch/: gazebo.launch.py
bunker_sim/src/match_mobile_robotics_jazzy/mir_robot/mir_description/: package.xml
bunker_sim/src/match_mobile_robotics_jazzy/mir_robot/mir_driver/: CMakeLists.txt  package.xml
bunker_sim/src/match_mobile_robotics_jazzy/mir_robot/mir_gazebo/worlds/: maze.world
bunker_sim/src/match_mobile_robotics_jazzy/mur_robot/mur_description/: CMakeLists.txt  package.xml
bunker_sim/src/match_mobile_robotics_jazzy/mur_robot/mur_launch_sim/launch/: example_multi_mur620.launch.py  example_mur620.launch.py  multi_mur620.launch.py  multi_mur_base.launch.py  mur620.launch.py  mur620_slim.launch.py  mur_base.launch.py  mur_base_full.launch copy.py  mur_base_slim.launch.py
bunker_sim/src/match_mobile_robotics_jazzy/my_robot_description/: CMakeLists.txt  model.config  package.xml
bunker_sim/src/match_mobile_robotics_jazzy/my_robot_description/config/: bunker_controllers.yaml  controllers_manual_load.yaml  controllers_manual_load_correct.yaml  controllers_min.yaml  diff_drive_controller.yaml  diff_drive_controller_params.yaml  diff_drive_only.yaml  gz_ros2_control_plugin_params.yaml  test_controllers.yaml
bunker_sim/src/match_mobile_robotics_jazzy/my_robot_description/launch/: spawn_robot.launch.py  spawn_with_controllers.launch.py  view_robot.launch.py
bunker_sim/src/match_mobile_robotics_jazzy/my_robot_description/scripts/: robot_description_publisher.py
bunker_sim/src/match_mobile_robotics_jazzy/my_robot_description/urdf/: bunker.urdf  bunker.urdf.xacro  bunker.xacro
bunker_sim/src/my_robot_description/scripts/: cmd_vel_to_diff_drive_twist_stamped.py
bunker_sim/src/ros-controls/ros2_control/controller_manager/controller_manager/: controller_manager_services.py
bunker_sim/src/ros-controls/ros2_control/controller_manager/src/: controller_manager.cpp
controllers_ros2/: CMakeLists.txt  README.md  package.xml
controllers_ros2/launch/: bunkur_ur_velocity_controller.launch.py
controllers_ros2/src/: jparse_velocity_controller.cpp
(+2 files in other folders)
