<?xml version="1.0"?>
<package format="3">
  <name>bunkUr_hardware</name>
  <version>0.0.0</version>
  <description>Launch files for the BunkUR hardware setup.</description>
  <maintainer email="user@todo.todo">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
